@@ -1,3 +1,9 @@
+2006-01-31  Paolo Carlini  <pcarlini@suse.de>
+
+	PR libstdc++/21554
+	* include/tr1/array (array<>::_M_instance): Maximally align.
+	* testsuite/ext/array_allocator/2.cc: Do not xfail for powerpc.
+
 2006-01-31  Ed Smith-Rowland  <3dw4rd@verizon.net>
 
 	* docs/html/faq/index.html ([1.0]): Replace references to CVS
